--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_GOOGLE_MAPS_API=AIzaSyBwYvPNyX6RcPvdcM6bosbIVa_EkZluwEc
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyD6mlhW68l6vUyrxjFHnLGvBkZhptai0RA
+REACT_APP_BACKEND_URL=http://localhost:5000/api
+REACT_APP_ASSET_URL=http://localhost:5000
